# nanovg

./: CMakeLists.txt
cmake/: Config.cmake.in
src/: stb_truetype.h
